--- a/src/_includes/components/about_content1.html
+++ b/src/_includes/components/about_content1.html
@@ -307,7 +307,7 @@
                     <B>Tenant Office Renovations</B> – Transforming office spaces for building owners and tenants.<BR><BR>
                         <B> Commercial Remodeling </B> Upgrading office spaces, storefronts, restrooms, and common areas.<BR><BR>
                             <B>New Commercial Design Build</B> – Custom solutions from concept to completion.<BR><BR>
-                                <B>Industrial Design-Build</B> – Efficient, high-quality industrial facility construction.<BR><BR>
+                                <B>Industrial Design-Build</B> – Efficient, high quality industrial facility construction.<BR><BR>
                                     <B> Building Maintenance</B> – Reliable property upkeep for management firms and owners.<BR>
                 </p>
             </li>
