--- a/src/_includes/components/photos.html
+++ b/src/_includes/components/photos.html
@@ -12,6 +12,7 @@
     overflow: hidden;
     position: relative;
     z-index: 1;
+    padding-top: 150px;
   }
   #gallery-2281:before {
     content: '';
