--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -1009,7 +1009,7 @@
                         </ul>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link {{ 'cs-active' if 'photos' == page.fileSlug }}">
+                        <a href="/photos" class="cs-li-link {{ 'cs-active' if 'photos' == page.fileSlug }}">
                             Photos
                         </a>
                     </li>
