--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -942,7 +942,7 @@
                     </li>
                     <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
                     <li class="cs-li cs-dropdown" tabindex="0">
-                        <span class="cs-li-link cs-dropdown-toggle">
+                        <span class="cs-li-link {{ 'cs-active' if 'services' == page.fileSlug }} cs-dropdown-toggle">
                             Services
                             <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                         </span>
@@ -955,7 +955,7 @@
                                 <!--Tertiary-->
                                 <ul class="cs-drop3">
                                     <li class="cs-drop-li3">
-                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Tenant Office Renovations</a>
+                                        <a href="/services" class="cs-li-link cs-drop-link cs-drop-link3">Tenant Office Renovations</a>
                                     </li>
                                     <li class="cs-drop-li3">
                                         <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Commercial Remodeling</a>
