--- a/src/_includes/components/faq.html
+++ b/src/_includes/components/faq.html
@@ -230,10 +230,10 @@
     <div class="cs-container">
         <picture class="cs-picture">
             <!--Mobile Image-->
-            <source media="(max-width: 600px)" srcset="/assets/images/3.jpg">
+            <source media="(max-width: 600px)" srcset="/assets/images/about1.jpg">
             <!--Tablet and above Image-->
-            <source media="(min-width: 601px)" srcset="/assets/images/3.jpg">
-            <img loading="lazy" decoding="async" src="/assets/images/3.jpg" alt="kitchen" width="373" height="550">
+            <source media="(min-width: 601px)" srcset="/assets/images/about1.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/about1.jpg" alt="kitchen" width="373" height="550">
         </picture>
         <div class="cs-content">
            
