--- a/src/_includes/components/service1_content.html
+++ b/src/_includes/components/service1_content.html
@@ -1,206 +1,350 @@
 <style>
     /*-- -------------------------- -->
-<---        Content Page        -->
+<---       Side By Side         -->
 <--- -------------------------- -*/
 
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-    #content-page-852 {
-        padding: var(--sectionPadding);
-        background-color: #fff;
-        /* clips the wave background from causing overflow issues when it goes off screen */
-        overflow: hidden;
-        position: relative;
-        z-index: 1;
-    }
-    #content-page-852 .cs-container {
-        width: 100%;
-        max-width: 80rem;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /* 48px - 64px */
-        gap: clamp(3rem, 6vw, 4rem);
-        position: relative;
-    }
-    #content-page-852 .cs-content {
-        /* set text align to left if content needs to be left aligned */
-        text-align: left;
-        width: 100%;
-        max-width: 46.125rem;
-        display: flex;
-        flex-direction: column;
-        /* centers content horizontally, set to flex-start to left align */
-        align-items: flex-start;
-    }
-    #content-page-852 .cs-title {
-        font-size: var(--headerFontSize);
-        font-weight: 900;
-        line-height: 1.2em;
-        text-align: inherit;
-        width: 100%;
-        max-width: 100%;
-        margin: 0 0 1rem 0;
-        color: var(--headerColor);
-        position: relative;
-    }
-    #content-page-852 h2,
-    #content-page-852 h3,
-    #content-page-852 h4,
-    #content-page-852 h5,
-    #content-page-852 h6 {
-        font-weight: 700;
-        text-align: inherit;
-        margin: 0 0 1rem 0;
-        color: var(--headerColor);
-    }
-    #content-page-852 h2 {
-        font-size: 2rem;
-        margin-top: 2rem;
-    }
-    #content-page-852 h3 {
-        font-size: 1.5rem;
-        color: var(--primary);
-    }
-    #content-page-852 h4,
-    #content-page-852 h5,
-    #content-page-852 h6 {
-        font-size: 1.25rem;
-    }
-    #content-page-852 .cs-button-solid {
-        margin-bottom: 2rem;
-    }
-    #content-page-852 .cs-no-margin {
-        margin: 0;
-    }
-    #content-page-852 .cs-color {
-        color: var(--primary);
-    }
-    #content-page-852 p {
-        font-size: var(--bodyFontSize);
-        line-height: 1.5em;
-        text-align: inherit;
-        width: 100%;
-        margin: 0 0 1rem 0;
-        color: var(--bodyTextColor);
-    }
-    #content-page-852 p:last-of-type {
-        margin-bottom: 2rem;
-    }
-    #content-page-852 p a {
-        font-size: inherit;
-        line-height: inherit;
-        text-decoration: underline;
-        color: var(--primary);
-    }
-    #content-page-852 ol,
-    #content-page-852 ul {
-        padding-left: 1.5rem;
-        margin: 0 0 2rem 0;
-        color: var(--bodyTextColor);
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-    #content-page-852 ul li {
-        list-style: none;
-        color: inherit;
-        position: relative;
-    }
-    #content-page-852 ul li:before {
-        /* custom list bullet */
-        content: "";
-        width: 3px;
-        height: 3px;
-        background: currentColor;
-        opacity: 1;
-        border-radius: 50%;
-        position: absolute;
-        display: block;
-        top: 0.625rem;
-        left: -0.75rem;
-    }
-    #content-page-852 img {
-        width: 100%;
-        height: auto;
-        display: block;
-    }
-    #content-page-852 .cs-image-group {
-        width: 50%;
-        max-width: 27.0625rem;
-        display: none;
-        flex-direction: column;
-        gap: 1.25rem;
-        position: relative;
-    }
-    #content-page-852 .cs-image-group:after {
-        /* colored box */
-        content: "";
-        width: 100%;
-        /* 177px - 258px */
-        height: clamp(11.0625rem, 19vw, 16.125rem);
-        background: var(--primary);
-        border-radius: 6.25rem 0 6.25rem;
-        opacity: 0.15;
-        display: block;
-    }
-    #content-page-852 .cs-picture {
-        width: 100%;
-        /* 300px - 520px */
-        height: clamp(18.75rem, 40vw, 32.5rem);
-        box-shadow: 0px 3.3478px 50.2169px rgba(0, 0, 0, 0.16);
-        /* 125px - 200px */
-        border-radius: 0 clamp(7.8125rem, 15vw, 12.5rem) 0
-            clamp(7.8125rem, 15vw, 12.5rem);
-        /* prevents border from affecting height and width */
-        box-sizing: border-box;
-        /* clips img tag corners */
-        overflow: hidden;
-        display: block;
-        position: relative;
-    }
-    #content-page-852 .cs-picture img {
-        width: 100%;
-        height: 100%;
-        /* makes it act like a background image */
-        object-fit: cover;
-    }
-}
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #content-page-852 .cs-container {
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-between;
-    }
-    #content-page-852 .cs-content {
-        flex: none;
-        max-width: 800px;
-        margin: auto;
-        /* sens it to the right in the 2nd position */
-        order: 2;
-    }
-    #content-page-852 .cs-image-group {
-        display: flex;
-    }
-}
+    /* Mobile - 360px */
+    @media only screen and (min-width: 0rem) {
 
-                                
+        #RPsbs-2278,
+        #RPsbsr-2278 {
+            background-color: #f7f7f7;
+            padding: var(--sectionPadding);
+            /* clips the green background pseudo from overflowing the section */
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px, changed clamp at Desktop */
+            gap: clamp(3rem, 6vw, 4rem);
+            position: relative;
+            z-index: 1;
+        }
+
+        #RPsbs-2278 .cs-header,
+        #RPsbsr-2278 .cs-header {
+            width: 100%;
+            /* changes to 1280px at Desktop */
+            max-width: 43.75rem;
+            margin: auto;
+        }
+
+        #RPsbs-2278 .cs-container,
+        #RPsbsr-2278 .cs-container {
+            width: 100%;
+            /* changes to 1280px at tablet */
+            max-width: 43.75rem;
+            margin: auto;
+            padding: var(--sectionPadding);
+            padding-left: 0;
+            padding-right: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px, changed clamp at tablet */
+            gap: clamp(3rem, 6vw, 4rem);
+            position: relative;
+            z-index: 1;
+        }
+
+        #RPsbs-2278 .cs-container:before,
+        #RPsbsr-2278 .cs-container:before {
+            /* green background */
+            content: "";
+            width: 100vw;
+            height: 100%;
+            background: #fff;
+            opacity: 1;
+            position: absolute;
+            display: block;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: -1;
+        }
+
+        #RPsbs-2278 .cs-content,
+        #RPsbsr-2278 .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            max-width: 42.875rem;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+        }
+
+        #RPsbs-2278 .cs-title,
+        #RPsbsr-2278 .cs-title {
+            margin: 0;
+            max-width: 24ch;
+        }
+
+        #RPsbs-2278 .cs-h3,
+        #RPsbsr-2278 .cs-h3 {
+            /* 25px - 39px */
+            font-size: clamp(1.5625rem, 4vw, 2.4375rem);
+            line-height: 1.2em;
+            margin: 0 0 1rem;
+            color: var(--headerColor);
+        }
+
+        #RPsbs-2278 .cs-text,
+        #RPsbsr-2278 .cs-text {
+            margin-bottom: 1rem;
+            /* uncomment this style if you remove the list for consistent styling*/
+        }
+
+        #RPsbs-2278 .cs-heading,
+        #RPsbsr-2278 .cs-heading {
+            font-size: 1rem;
+            line-height: 1.2em;
+            font-weight: 700;
+            margin: 0 0 1rem;
+            color: var(--headerColor);
+        }
+
+        #RPsbs-2278 .cs-ul,
+        #RPsbsr-2278 .cs-ul {
+            width: 100%;
+            margin: 0 0 2rem 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 0.5rem;
+        }
+
+        #RPsbs-2278 .cs-li,
+        #RPsbsr-2278 .cs-li {
+            list-style: none;
+            font-size: 1rem;
+            line-height: 1.5em;
+            color: var(--bodyTextColor);
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            gap: 0.75rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        #RPsbs-2278 .cs-li:before,
+        #RPsbsr-2278 .cs-li:before {
+            content: '';
+            width: 0.5rem;
+            height: 0.5rem;
+            margin-top: 0.4375rem;
+            background: var(--secondary);
+            opacity: 1;
+            display: block;
+            flex: none;
+            transform: rotate(45deg);
+        }
+
+        #RPsbs-2278 .cs-number,
+        #RPsbsr-2278 .cs-number {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 1.6vw, 1rem);
+            font-weight: 700;
+            /* 24px - 28px */
+            width: clamp(1.5rem, 2.9vw, 1.75rem);
+            height: clamp(1.5rem, 2.9vw, 1.75rem);
+            margin-right: 0.75rem;
+            border-radius: 50%;
+            background: var(--headerColor);
+            color: var(--primary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* we set this element to align to the top of the li, so if there's 
+            multiple lines it will stay at the top instead of the center of the text */
+            align-self: flex-start;
+            /* prevents flexbox from squishing it */
+            flex: none;
+        }
+
+        
+
+        #RPsbs-2278 .cs-picture,
+        #RPsbsr-2278 .cs-picture {
+            width: 100%;
+            height: 91.14vw;
+            max-height: 22.5rem;
+            margin: 0;
+            position: relative;
+            display: block;
+        }
+
+        #RPsbs-2278 .cs-picture img,
+        #RPsbsr-2278 .cs-picture img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    /* Desktop - 768px */
+    @media only screen and (min-width: 64rem) {
+
+        #RPsbs-2278 .cs-header,
+        #RPsbsr-2278 .cs-header {
+            max-width: 80rem;
+        }
+
+        #RPsbs-2278 .cs-container,
+        #RPsbsr-2278 .cs-container {
+            max-width: 80rem;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: stretch;
+        }
+
+        #RPsbs-2278 .cs-container:before,
+        #RPsbsr-2278 .cs-container:before {
+            /* 110px - 335px */
+            margin-left: calc(clamp(110px, 14vw, 335px)*-1);
+            left: 50%;
+            transform: none;
+        }
+
+        #RPsbs-2278 .cs-picture,
+        #RPsbsr-2278 .cs-picture {
+            max-width: 32.625rem;
+            height: auto;
+            max-height: 100%;
+        }
+    }
+
+    /*-- -------------------------- -->
+<---   Side By Side Reverse     -->
+<--- -------------------------- -*/
+
+    /* Mobile - 360px */
+    @media only screen and (min-width: 0rem) {
+        #RPsbsr-2278 {
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+    }
+
+    /* Desktop - 768px */
+    @media only screen and (min-width: 64em) {
+        #RPsbsr-2278 {
+            padding: var(--sectionPadding);
+            padding-top: 0;
+        }
+
+        #RPsbsr-2278 .cs-container {
+            justify-content: flex-end;
+        }
+
+        #RPsbsr-2278 .cs-container:before {
+            margin-left: 0;
+            /* 110px - 335px */
+            margin-right: calc(clamp(110px, 14vw, 335px)*-1);
+            right: 50%;
+            left: auto;
+            transform: none;
+        }
+
+        #RPsbsr-2278 .cs-picture {
+            /* sends it to the right in the 2nd position */
+            order: 2;
+        }
+    }
 </style>
-<section id="content-page-852">
+
+
+<!-- ============================================ -->
+<!--                 Side By Side                 -->
+<!-- ============================================ -->
+
+<section id="RPsbs-2278">
+    <div class="cs-header">
+        <span class="cs-topper">Our Core</span>
+        <h2 class="cs-title">Commercial<BR>Construction Services</h2>
+    </div>
     <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/1.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/1.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/1.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
         <div class="cs-content">
+            <h3 class="cs-h3">Tenant Office Renovations</h3>
+            <p class="cs-text">
+                Your office should work for you, not against you. We transform outdated office spaces into modern,
+                functional environments that inspire productivity and improve employee retention. Whether you're a
+                building owner or a tenant, we create offices that feel like home while maximizing efficiency.
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Full office redesign & layout improvements
+
+                </li>
+                <li class="cs-li">
+                    ✔ Breakroom & common area renovations
+                  
+                </li>
+                <li class="cs-li">
+                    ✔ Upgraded lighting, flooring, and finishes
+                </li>
            
-            <p>
-                Are you dealing with issues that require expert attention? Perhaps there's a challenge that's becoming a safety concern, impacting efficiency, or simply requiring specialized knowledge and tools. In such cases, hiring a professional service can be the smartest solution. Attempting to handle it yourself can be risky, time-consuming, and may not yield the desired results.
-                <BR><BR>
-Professional services come equipped with the tools, skills, and experience needed to assess the situation and implement the most effective solution. They can also ensure proper handling of any materials or byproducts in an environmentally responsible way. Additionally, experts can offer guidance on whether a complete intervention is necessary or if alternative approaches might be more suitable.
-<BR><BR>
-Choosing a professional service guarantees that the issue is resolved safely and efficiently while preserving the quality and value of your property or project. So the next time you're faced with a complex challenge, consider reaching out to the experts for reliable assistance!
-               </p>
+            </ul>
+            <a class="cs-button-solid" href="">Contact us to get started</a>
         </div>
-      
     </div>
 </section>
-                                
+
+
+<!-- ============================================ -->
+<!--             Side By Side Reverse             -->
+<!-- ============================================ -->
+
+<section id="RPsbsr-2278">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)"
+                srcset="/assets/images/2.jpg">
+            <source media="(min-width: 601px)"
+                srcset="/assets/images/2.jpg">
+            <img loading="lazy" decoding="async"
+                src="/assets/images/2.jpg" alt="construction"
+                width="500" height="552" aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Commercial Remodeling</h3>
+            <p class="cs-text">
+                From office spaces and storefronts to restrooms and building common areas, we specialize in high end commercial renovations that bring new life to your space.
+
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Office, retail, and restaurant remodels
+
+                </li>
+                <li class="cs-li">
+                    ✔ Conference rooms, lobbies, and reception areas
+                   
+                </li>
+                <li class="cs-li">
+                    ✔ ADA compliance upgrades & modern finishes
+                </li>
+    
+            </ul>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
