--- a/src/_includes/components/service1_content.html
+++ b/src/_includes/components/service1_content.html
@@ -165,7 +165,7 @@
             flex: none;
         }
 
-        
+
 
         #RPsbs-2278 .cs-picture,
         #RPsbsr-2278 .cs-picture {
@@ -293,12 +293,12 @@
                 </li>
                 <li class="cs-li">
                     ✔ Breakroom & common area renovations
-                  
+
                 </li>
                 <li class="cs-li">
                     ✔ Upgraded lighting, flooring, and finishes
                 </li>
-           
+
             </ul>
             <a class="cs-button-solid" href="">Contact us to get started</a>
         </div>
@@ -314,19 +314,17 @@
     <div class="cs-container">
         <!-- Left Image Section -->
         <picture class="cs-picture">
-            <source media="(max-width: 600px)"
-                srcset="/assets/images/2.jpg">
-            <source media="(min-width: 601px)"
-                srcset="/assets/images/2.jpg">
-            <img loading="lazy" decoding="async"
-                src="/assets/images/2.jpg" alt="construction"
-                width="500" height="552" aria-hidden="true">
+            <source media="(max-width: 600px)" srcset="/assets/images/2.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/2.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/2.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
         </picture>
         <!-- Right Content Section-->
         <div class="cs-content">
             <h3 class="cs-h3">Commercial Remodeling</h3>
             <p class="cs-text">
-                From office spaces and storefronts to restrooms and building common areas, we specialize in high end commercial renovations that bring new life to your space.
+                From office spaces and storefronts to restrooms and building common areas, we specialize in high end
+                commercial renovations that bring new life to your space.
 
             </p>
             <span class="cs-heading">Services Include:</span>
@@ -337,12 +335,91 @@
                 </li>
                 <li class="cs-li">
                     ✔ Conference rooms, lobbies, and reception areas
-                   
+
                 </li>
                 <li class="cs-li">
                     ✔ ADA compliance upgrades & modern finishes
                 </li>
-    
+
+            </ul>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
+
+
+<section id="RPsbs-2278">
+
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture" style="border:1px solid #ccc">
+            <source media="(max-width: 600px)" srcset="/assets/images/3.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/3.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/3.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Commercial Design Build</h3>
+            <p class="cs-text">
+                Why juggle multiple contractors when you can work with one trusted team? We handle your project from
+                concept to completion, ensuring every detail aligns with your vision and budget.
+
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Custom office buildings & commercial spaces
+                  
+                    
+
+                </li>
+                <li class="cs-li">
+                    ✔ Architectural planning & construction execution
+                  
+
+                </li>
+                <li class="cs-li">
+                    ✔ Seamless integration of design, engineering, and construction
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
+
+
+<section id="RPsbsr-2278">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/4.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/4.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/4.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Industrial Design Build</h3>
+            <p class="cs-text">
+                Industrial spaces need to be efficient, durable, and built to last. We provide cost effective industrial
+                construction solutions that maximize productivity while minimizing long term maintenance. </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Warehouse & manufacturing facility construction
+                </li>
+                <li class="cs-li">
+                    ✔ Structural improvements & layout optimization
+
+                </li>
+                <li class="cs-li">
+                    ✔ Specialized industrial flooring & safety enhancements
+                </li>
+
             </ul>
             <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
         </div>
