--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -955,10 +955,10 @@
                                 <!--Tertiary-->
                                 <ul class="cs-drop3">
                                     <li class="cs-drop-li3">
-                                        <a href="/services" class="cs-li-link cs-drop-link cs-drop-link3">Tenant Office Renovations</a>
+                                        <a href="/services/#tenant-office-renovations" class="cs-li-link cs-drop-link cs-drop-link3">Tenant Office Renovations</a>
                                     </li>
                                     <li class="cs-drop-li3">
-                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Commercial Remodeling</a>
+                                        <a href="/services/#commercial-remodeling" class="cs-li-link cs-drop-link cs-drop-link3">Commercial Remodeling</a>
                                     </li>
                                     <li class="cs-drop-li3">
                                         <a href="" class="cs-li-link cs-drop-link cs-drop-link3">New Commercial Design Build</a>
@@ -1001,7 +1001,7 @@
                                         <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
                                     </li>
                                     <li class="cs-drop-li3">
-                                        <a href="" class="cs-li-link cs-drop-link cs-drop-link3">Service</a>
+                                        <a href="/services/#vinyl" class="cs-li-link cs-drop-link cs-drop-link3">Vinyl Cabinet Wrapping & Wallpaper Installation</a>
                                     </li>
                    
                                 </ul>
