--- a/src/_includes/components/service1_content.html
+++ b/src/_includes/components/service1_content.html
@@ -265,11 +265,11 @@
 <!-- ============================================ -->
 
 <section id="RPsbs-2278">
-    <div class="cs-header">
+    <div class="cs-header" id="services">
         <span class="cs-topper">Our Core</span>
         <h2 class="cs-title">Commercial<BR>Construction Services</h2>
     </div>
-    <div class="cs-container">
+    <div class="cs-container" id="tenant-office-renovations">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/1.jpg">
@@ -311,7 +311,7 @@
 <!-- ============================================ -->
 
 <section id="RPsbsr-2278">
-    <div class="cs-container">
+    <div class="cs-container" id="commercial-remodeling">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/2.jpg">
@@ -425,3 +425,229 @@
         </div>
     </div>
 </section>
+
+
+
+
+<section id="RPsbs-2278">
+
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture" style="border:1px solid #ccc">
+            <source media="(max-width: 600px)" srcset="/assets/images/5.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/5.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/5.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Building Maintenance & Property Management Services</h3>
+            <p class="cs-text">
+                We help property owners and managers maintain, upgrade, and protect their investments with top-tier maintenance solutions.
+
+
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Ongoing repairs & upkeep
+                   
+
+                </li>
+                <li class="cs-li">
+                    ✔ Light plumbing & electrical upgrades
+               
+                    
+
+                </li>
+                <li class="cs-li">
+                    ✔ Painting, flooring, and finish enhancements
+                    
+                  
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+<section id="RPsbs-2278" >
+    <div class="cs-header">
+        <span class="cs-topper">Additional</span>
+        <h2 class="cs-title">Residential & Commercial Services
+        </h2>
+    </div>
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/residential1.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/residential1.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Tile & Paint Work</h3>
+            <p class="cs-text">
+                Upgrade your space with professional tile installation and high-quality painting services that enhance durability and aesthetics.
+
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Interior & exterior painting
+                
+                    
+                </li>
+                <li class="cs-li">
+                    ✔ Custom tile backsplashes & flooring
+                </li>
+                <li class="cs-li">
+                    
+                    ✔ Luxury finishes & protective coatings
+
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+<section id="RPsbsr-2278">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/residential2.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/residential2.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/residential2.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Electrical Upgrades & Light Plumbing</h3>
+            <p class="cs-text">
+                Keep your building safe, functional, and up to code with our expert electrical and plumbing services.
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Lighting installation & fixture upgrades
+                    
+                    
+                </li>
+                <li class="cs-li">
+                    ✔ Basic plumbing repairs & fixture replacements
+                  
+                </li>
+                <li class="cs-li">
+                    ✔ Smart office technology integrations
+
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
+
+
+<section id="RPsbs-2278" >
+
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/residential3.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/residential3.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/residential3.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Concrete Staircase Wood Graining</h3>
+            <p class="cs-text">
+                Transform ordinary concrete staircases into realistic wood like finishes for a high-end, natural look without the maintenance.
+
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Durable, weather-resistant concrete finishing
+               
+                    
+                </li>
+                <li class="cs-li">
+                    ✔ Custom wood grain patterns & stains
+                   
+                    
+                </li>
+                <li class="cs-li">
+                    
+                    ✔ Ideal for commercial & residential properties
+
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+<section id="RPsbsr-2278">
+    <div class="cs-container">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/residential1.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/residential1.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div id="vinyl" class="cs-content">
+            <h3 class="cs-h3">Vinyl Cabinet Wrapping & Wallpaper Installation
+            </h3>
+            <p class="cs-text">
+                A cost effective way to update your space without a full renovation.
+
+            </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Modernize old cabinets with high end vinyl wrapping
+                
+                    
+                    
+                </li>
+                <li class="cs-li">
+                    ✔ Custom wallpaper installation for offices & homes
+                  
+                  
+                </li>
+                <li class="cs-li">
+                    ✔ Budget friendly alternative to complete cabinetry replacement
+                    
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+        </div>
+    </div>
+</section>
+
