--- a/src/_includes/components/service1_header.html
+++ b/src/_includes/components/service1_header.html
@@ -12,7 +12,7 @@
   #banner-2285 {
     padding: var(--sectionPadding);
     /* 190px - 280px */
-    padding-top: clamp(11.875rem, 25vw, 11.5rem);
+    padding-top: clamp(9.875rem, 25vw, 9.5rem);
     padding-bottom: 0rem;
     /* clips the line from causing overflow issues for going off screen */
     overflow: hidden;
@@ -151,10 +151,10 @@
       <div class="cs-title" style="color: white; text-align: left;">High End Craftsmanship. Transparent Pricing. Superior Results.</div>
       <span class="cs-topper" >Our Services</span>
       <p class="cs-text" style="margin-bottom: 50px;">
-        Your business or home deserves more than just another contractor. It deserves a partner who understands your vision and delivers beyond expectations. At Abstract Construction LLC, we offer a full range of commercial, industrial, and residential construction services designed to elevate your space, increase efficiency, and improve long term value.
+        Your business or home deserves more than just another contractor. It deserves a partner who understands your vision and delivers beyond expectations. At Abstract Construction LLC, we offer a full range of commercial, industrial, & residential construction services designed to elevate your space, increase efficiency, and improve long term value.
 
       </p>
-      <a class="cs-button-solid" style="display: block; margin: 0px 0px 50px;" href="#services">Explore our services
+      <a class="cs-button-solid" style="display: block; margin: 0px 0px 80px;" href="#services">Explore our services
         </a>
       <div class="cs-breadcrumbs">
           <a href="/" class="cs-link">Home</a>
