--- a/src/_includes/components/3services.html
+++ b/src/_includes/components/3services.html
@@ -233,7 +233,7 @@
         <ul class="cs-card-group">
           
             <li class="cs-item" >
-                <a href="" class="cs-link">
+                <a href="/services/#tenant-office-renovations" class="cs-link">
                     <h3 class="cs-h3">Office Renovations</h3>
                     <p class="cs-item-text">
                         Modernizing office spaces for businesses and building owners.
@@ -247,7 +247,7 @@
             </li>
         
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services/#commercial-remodeling" class="cs-link">
                     <h3 class="cs-h3">Commercial Remodeling</h3>
                     <p class="cs-item-text">
                         Office buildouts, storefronts, restrooms, and common areas.
