--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -127,7 +127,7 @@
           <span class="cs-topper" data-aos="fade-up">Let’s Build Smarter.</span>
           <h2 class="cs-title" data-aos="fade-up"> Let’s Build Better.</h2>
 
-          <a href="" class="cs-button-solid">Let's build together</a>
+          <a href="/contact" class="cs-button-solid">Let's build together</a>
       </div>
       <div class="cs-image-group">
 
