--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -269,13 +269,20 @@
           <span class="cs-header">Quick Links</span>
           <ul class="cs-ul">
             <li class="cs-li">
-              <a class="cs-link" href="">About Us</a>
+                <a class="cs-link" href="/">Home</a>
+            </li>
+            <li class="cs-li">
+              <a class="cs-link" href="/about">About Us</a>
           </li>
               <li class="cs-li">
-                  <a class="cs-link" href="">Our Services</a>
+                  <a class="cs-link" href="/services">Our Services</a>
               </li>
               <li class="cs-li">
-                <a class="cs-link" href="">Photos of our Work</a>
+                <a class="cs-link" href="/photos">Photos of our Work</a>
+            </li>
+
+            <li class="cs-li">
+                <a class="cs-link" href="/contact">Contact Us</a>
             </li>
 
             <li class="cs-li">
