--- a/src/_includes/components/3services.html
+++ b/src/_includes/components/3services.html
@@ -261,7 +261,7 @@
             </li>
         
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services/#commercial-design-build" class="cs-link">
                     <h3 class="cs-h3">Commercial Design Build</h3>
                     <p class="cs-item-text">
                         Streamlined construction from concept to completion.
@@ -275,7 +275,7 @@
             </li>
         
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services/#industrial-development" class="cs-link">
                     <h3 class="cs-h3">Industrial Development</h3>
                     <p class="cs-item-text">
                         High performance industrial spaces tailored to your operations.
@@ -291,7 +291,7 @@
            
         
             <li class="cs-item">
-                <a href="" class="cs-link">
+                <a href="/services/#building-maintenance" class="cs-link">
                     <h3 class="cs-h3">Building Maintenance</h3>
                     <p class="cs-item-text">
                         Long term upkeep solutions for property managers and owners.
@@ -306,10 +306,10 @@
 
             
             <li class="cs-item">
-                <a href="" class="cs-link">
-                    <h3 class="cs-h3">Building Maintenance</h3>
+                <a href="/services/" class="cs-link">
+                    <h3 class="cs-h3">Mobile Welding Service</h3>
                     <p class="cs-item-text">
-                        Long term upkeep solutions for property managers and owners.
+                        We bring expert welding services directly to your job site with our Mobile Welding Service.
                     </p>
                 </a>
                 <picture class="cs-item-background">
