--- a/src/_includes/components/5why.html
+++ b/src/_includes/components/5why.html
@@ -230,7 +230,7 @@
                     <strong>Long Term Partnerships</strong> - More than just contractors - we’re your trusted lifetime construction partner.
                 </li>
             </ul>
-            <a href="" class="cs-button-solid">Get a Free Custom Quote</a>
+            <a href="/contact" class="cs-button-solid">Get a Free Custom Quote</a>
         </div>
     </div>
 </section>
