--- a/src/_includes/components/9form.html
+++ b/src/_includes/components/9form.html
@@ -163,7 +163,7 @@
 
           </div>
           <!--Form-->
-          <form class="cs-form" id="cs-form-587" name="Contact Form" method="post">
+          <form netlify class="cs-form" id="cs-form-587" name="Contact Form" method="post">
               <label class="cs-label">
                   Name
                   <input class="cs-input" required type="text" id="name-587" name="name" placeholder="Name">
