--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -947,12 +947,12 @@
                             <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                         </span>
                         <ul class="cs-drop-ul">
-                            <a href="/services" class="cs-li-link cs-drop-link">
-                               View All Construction Services
+                            <a href="/about" class="cs-li-link cs-drop-link">
+                               View All Services
                             </a>
                             <li class="cs-drop-li cs-drop3-main">
                                 <span class="cs-li-link cs-drop-link ">
-                                    Commercial Construction Services
+                                    Commercial Services
                                     <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                                 </span>
                                 <!--Tertiary-->
@@ -974,7 +974,7 @@
                             </li>
                             <li class="cs-drop-li cs-drop3-main">
                                 <span class="cs-li-link cs-drop-link">
-                                    Industrial Construction Services
+                                    Industrial Services
                                     <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                                 </span>
                                 <!--Tertiary-->
@@ -989,7 +989,7 @@
                             </li>
                             <li class="cs-drop-li cs-drop3-main">
                                 <span class="cs-li-link cs-drop-link">
-                                    Residential Construction Services
+                                    Residential Services
                                     <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                                 </span>
                                 <!--Tertiary-->
